[tool.poetry]
name = "30-days-streamlit"
version = "0.1.0"
description = ""
authors = ["Maximilian Huber <maximilian.huber@automators.com>"]
readme = "README.md"
packages = [{include = "30_days_streamlit"}]

[tool.poetry.dependencies]
python = "^3.9"
numpy = "^1.24.1"
plotly = "^5.11.0"
streamlit = "^1.9.0"
pandas = "^1.5.2"
altair = "^4.2.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
