[tool.poetry]
name = "30-days-streamlit"
version = "0.1.0"
description = ""
authors = ["Maximilian Huber <maximilian.huber@automators.com>"]
readme = "README.md"
packages = [{include = "30_days_streamlit"}]

[tool.poetry.dependencies]
python = ">=3.9,<3.11"
numpy = ">=1.16.0,<1.24"
plotly = "^5.11.0"
streamlit = "^1.9.0"
pandas = "^1.5.2"
altair = "^4.2.0"
pandas-profiling = "^3.6.2"
streamlit-pandas-profiling = "^0.1.3"
streamlit-shap = "^1.0.2"
xgboost = "^1.7.3"
sklearn = "^0.0.post1"
streamlit-option-menu = "^0.3.2"
requests = "^2.28.1"
streamlit-tags = "^1.2.8"
streamlit-aggrid = "^0.3.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"